...
    var passwordTextFieldHeightAnchor: NSLayoutConstraint?

    ///Button for skipping the login screen
    let skipButton: UIButton = {
        let skip = UIButton(type: .system)
        skip.backgroundColor = .clear
        skip.setTitle("Skip for now", for: .normal)
        skip.setTitleColor(.white, for: .normal)
        skip.translatesAutoresizingMaskIntoConstraints = false
        skip.layer.cornerRadius = 5
        skip.layer.masksToBounds = true
        skip.addTarget(self, action: #selector(handleSkipButton), for: .touchUpInside)
        return skip
...
        return cameraView
    }()
    
    ///The textfield where the user can enter their name when they are registering
    let nameTextField: UITextField = {
        let textField = UITextField()
        textField.placeholder = "Name"
        textField.attributedPlaceholder = NSAttributedString(string: textField.placeholder!, attributes: [NSAttributedString.Key.foregroundColor: UIColor.gray])
        textField.textColor = .black
        textField.tintColor = .systemPink
        textField.translatesAutoresizingMaskIntoConstraints = false
        return textField
    }()

    ///The textfield where the user can enter their email when they are registering
    let emailTextField: UITextField = {
        let textField = UITextField()
        textField.placeholder = "Email Address"
        textField.attributedPlaceholder = NSAttributedString(string: textField.placeholder!, attributes: [NSAttributedString.Key.foregroundColor: UIColor.gray])
        textField.textColor = .black
        textField.tintColor = .systemPink
        textField.translatesAutoresizingMaskIntoConstraints = false
        return textField
    }()

    ///The textfield where the user can enter their password when they are registering
    let passwordTextField: UITextField = {
        let textField = UITextField()
        textField.placeholder = "Password"
        textField.attributedPlaceholder = NSAttributedString(string: textField.placeholder!, attributes: [NSAttributedString.Key.foregroundColor: UIColor.gray])
        textField.textColor = .black
        textField.tintColor = .systemPink
        textField.translatesAutoresizingMaskIntoConstraints = false
        textField.isSecureTextEntry = true //makes the little dots appear for password
        return textField
...
        return view
    }()

    ///A logo for the login screen
    let logoView: UIImageView = {
        let imageView = UIImageView()
        imageView.image = UIImage(named: "yo")
        imageView.translatesAutoresizingMaskIntoConstraints = false
        imageView.contentMode = .scaleAspectFit
        return imageView
    }()

    ///The button that changes the view from register mode to login mode
    let toggleRegisterLoginButton: UIButton = {
        let toggleButton = UIButton(type: .system)
        toggleButton.backgroundColor = .white
        toggleButton.setTitle("Already a user? Login", for: .normal)
        toggleButton.setTitleColor(.systemPink, for: .normal)
        toggleButton.translatesAutoresizingMaskIntoConstraints = false
        toggleButton.layer.cornerRadius = 5
        toggleButton.layer.masksToBounds = true
        toggleButton.addTarget(self, action: #selector(toggleRegisterLoginButtonPressed), for: .touchUpInside)
        return toggleButton
    }()

    ///When this button is pressed, the information entered will be sent to firebase
    let infoSubmitButton: UIButton = {
        let submitButton = UIButton(type: .system)
        submitButton.backgroundColor = UIColor.white
        submitButton.setTitle("Register", for: .normal)
        submitButton.setTitleColor(.systemPink, for: .normal)
        submitButton.translatesAutoresizingMaskIntoConstraints = false
        submitButton.layer.cornerRadius = 5
        submitButton.layer.masksToBounds = true
        submitButton.addTarget(self, action: #selector(infoSubmitButtonPressed), for: .touchUpInside)
        return submitButton
...
    @objc func toggleRegisterLoginButtonPressed() {
        print("we pressed the toggle button")

        //hide the keyboard
        hideKeyboard()

        toggleRegisterLoginButton.setTitle(isRegisterButton ? "Not a user? Register" : "Already a user? Login", for: .normal)
        infoSubmitButton.setTitle(isRegisterButton ? "Login" : "Register", for: .normal)

        //what happens when this is pressed?
        //both button titles need to change and input container needs to shrink, removing the name field

        inputsContainerViewHeightAnchor?.constant = isRegisterButton ? 100 : 150

...

        //code for creating a user in auth
        Auth.auth().createUser(withEmail: email, password: password) { (result, err) in
            if err != nil {
                print(err!)
                let alert = UIAlertController(title: "Alert", message: err?.localizedDescription, preferredStyle: UIAlertController.Style.alert)
                alert.addAction(UIAlertAction(title: "Continue", style: UIAlertAction.Style.default, handler: nil))
                self.present(alert, animated: true, completion: nil)
                return
            }

            //check to see if uid exists
            guard let uid = result?.user.uid else {
...
