...
        topBar.addSubview(backButton)
        backButton.translatesAutoresizingMaskIntoConstraints = false
        backButton.leadingAnchor.constraint(equalTo: topBar.leadingAnchor, constant: 20).isActive = true
        backButton.bottomAnchor.constraint(equalTo: topBar.bottomAnchor, constant: -10).isActive = true
        backButton.heightAnchor.constraint(equalToConstant: 30).isActive = true
        backButton.widthAnchor.constraint(equalToConstant: 30).isActive = true
        let tintedImage = #imageLiteral(resourceName: "back").withRenderingMode(.alwaysTemplate)
        backButton.setImage(tintedImage, for: .normal)
        backButton.tintColor = .white
        backButton.addTarget(self, action: #selector(backButtonTapped), for: .touchUpInside)
    }

    ///Sets up the create note button and defines its constraints
...
        view.addSubview(createNoteButton)
        createNoteButton.translatesAutoresizingMaskIntoConstraints = false
        createNoteButton.trailingAnchor.constraint(equalTo: view.trailingAnchor).isActive = true
        createNoteButton.bottomAnchor.constraint(equalTo: view.bottomAnchor).isActive = true
        createNoteButton.heightAnchor.constraint(equalToConstant: 60).isActive = true
        createNoteButton.leadingAnchor.constraint(equalTo: view.leadingAnchor).isActive = true
        createNoteButton.setTitle("New Note", for: .normal)
        createNoteButton.titleLabel?.font = UIFont.boldSystemFont(ofSize: 20)
        createNoteButton.backgroundColor = .blue
        createNoteButton.addTarget(self, action: #selector(createNoteButtonTapped), for: .touchUpInside)
    }

    ///Handles the create note button being tapped
...
