...
    func presentUnableToResumeSessionAlert() {
        let alert = UIAlertController(
            title: "Unable to Resume Session",
            message: "There was an error while attempting to resume session.",
            preferredStyle: .alert
        )
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))

        self.present(alert, animated: true)
    }
    
    /// Invoke the model to identify from the given image in pasteboard
    @objc func classifyPasteboardImage() {
...

    
    ///Setup the remote chat button and add it on the view
    func remoteChatButtonSetup() {
        view.addSubview(remoteChatButton)
        remoteChatButton.translatesAutoresizingMaskIntoConstraints = false
        remoteChatButton.setImage(#imageLiteral(resourceName: "chatIcon"), for: .normal)
        remoteChatButton.widthAnchor.constraint(equalToConstant: 30).isActive = true
        remoteChatButton.heightAnchor.constraint(equalToConstant: 30).isActive = true
        remoteChatButton.imageView?.contentMode = .scaleAspectFit
        remoteChatButton.leadingAnchor.constraint(equalTo: view.leadingAnchor, constant: 20).isActive = true
        remoteChatButton.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor, constant: 10).isActive = true
        //remoteChatButton.setTitle("Chat", for: .normal)
...
        view.addSubview(notesButton)
        notesButton.translatesAutoresizingMaskIntoConstraints = false
        notesButton.trailingAnchor.constraint(equalTo: view.trailingAnchor, constant: -20).isActive = true
        notesButton.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor, constant: 10).isActive = true
        notesButton.widthAnchor.constraint(equalToConstant: 30).isActive = true
        notesButton.heightAnchor.constraint(equalToConstant: 30).isActive = true
        notesButton.setImage(#imageLiteral(resourceName: "notesIcon"), for: .normal)
        //notesButton.setTitle("Notes", for: .normal)
        notesButton.addTarget(self, action: #selector(notesButtonTapped), for: .touchUpInside)

        notesButton.imageView?.contentMode = .scaleAspectFit
    }

...
