...
    func loadNote() {

        toggleSaveButtonDisabled()

        if note == nil {
            noteTitle.placeholder = "Title"
            textView.placeholder = "Type note here..."

        } else {
            noteTitle.text = note?.title
            textView.text = note?.text
        }
    }
...
