...
			let jsonEncoder = JSONEncoder()
			let paramaters: [String:Any] = ["vid_stuff":frame]

			var request = URLRequest(url: url)
		//	request.setValue("application/x-www-form-urlencoded", forHTTPHeaderField: "Content-Type")

		//		let send = try! JSONSerialization.data(withJSONObject: paramaters, options: .prettyPrinted)
			request.httpBody = paramaters.percentEncoded()
			request.httpMethod = "POST"
			//SEND
			let task = URLSession.shared.dataTask(with: request) { data, response, error in
						guard let data = data,
							let response = response as? HTTPURLResponse,
...
